<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/ColorWhite"
    tools:context="bnz8.uw.tacoma.edu.caloriemeter.SignInFragment"
    android:weightSum="1">


    <EditText
        android:id="@+id/userid_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:hint="@string/Email_hint"/>

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pwd_hint" />

    <Button
        android:id="@+id/login_button_nonfacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_text"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/signUp_Button_toFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign Up"
        android:textAllCaps="false"/>



        <!--<com.facebook.login.widget.LoginButton-->
    <!--android:id="@+id/login_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:layout_gravity="center"-->
    <!--/>-->


    <!--<Button-->
        <!--android:id="@+id/facebook_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="   Log in with facebook   "-->

        <!--android:textColor="@color/ColorWhite"-->
        <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:layout_gravity="center" />-->

</LinearLayout>




