<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="bnz8.uw.tacoma.edu.caloriemeter.RegisterFragment">

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/fNameUpTextView"-->

        <!--android:text=""-->
        <!--android:hint="@string/firstnameHint"/>-->

    <EditText
        android:id="@+id/email_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email_hint"/>
    <EditText
        android:id="@+id/create_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Please create a password" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/sign_up_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUpButton"
            android:onClick="signedUpAction"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelButton"
        android:onClick="cancelAction"

        android:visibility="invisible" />



</LinearLayout>
</LinearLayout>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="bnz8.uw.tacoma.edu.caloriemeter.RegisterFragment">-->



<!--</FrameLayout>-->